--- a/app/assets/stylesheets/housing/housing.css
+++ b/app/assets/stylesheets/housing/housing.css
@@ -1,65 +1,96 @@
- .upper-menu,.upper-menu ul li:hover{-webkit-tap-highlight-color:transparent}
- .categories ul li,.details{list-style:none;float:left}
- .genre,.top_home_page{background-color:#F5F5F5}
- .up-var{padding-top:57px}
- .upper-menu{text-align:center;height:50px;cursor:pointer;margin-top:-43px;margin-left:-170px;border-top:2px solid #ebebeb;border-bottom:2px solid #ebebeb;transition:all .5s}
- .upper-menu ul li{margin-top:16px;text-transform:uppercase;font-size:14px;font-weight:700;width:13%;float:left;box-sizing:border-box;border-right:1px solid #ebebeb;overflow:hidden}
- .upper-menu ul li:hover{color:gray}
- .home-all-wrapper{position:relative;height:1000px}
- .top_home_page{height:280px;width:2000px;position:relative}
- .top_home_page h1,.top_home_page h3{position:absolute;margin-right:740px}
- .top_home_page h1{right:550px;bottom:100px;font-size:50px}
- .top_home_page h3{font-size:15px;right:450px;bottom:80px}
- .home_pictures_wrapper{text-align:left}
- .home_pictures_wrapper h1{color:#696969;margin-left:100px;padding-top:30px;padding-bottom:10px}
- .home_pictures{margin-left:144px}
- .home_pictures p{text-align:center;text-rendering:optimizeLegibility;width:70%;margin:0 auto}
- .pic{float:left;width:0 auto;margin:4px}
- .home-all-wrapper h2{margin-left:154px}
- .categories ul{margin-left:92px}
- .categories ul li{height:140px;margin-top:30px;margin-left:10px;padding:3px;width:21%;font-size:17px;border-radius:4px}
- .home-story-wrapper{height:600px}
- .home-story{margin-left:109px;padding-top:25px}
- .panel-body-housing{height:120px;width:100%}
+ .upper-menu,.upper-menu ul li:hover{
+ 	-webkit-tap-highlight-color:transparent
+ }
+ .categories ul li,.details{
+ 	list-style:none;
+ 	float:left
+ }
+
+ .genre,.top_home_page{
+ 	background-color:#F5F5F5
+ }
+ .up-var{
+ 	padding-top:57px
+ }
+ .upper-menu{
+ 	text-align:center;
+ 	height:50px;
+ 	cursor:pointer;
+ 	margin-top:-43px;
+ 	margin-left:-170px;
+ 	border-top:2px solid #ebebeb;
+ 	border-bottom:2px solid #ebebeb;
+ 	transition:all .5s
+ }
+ .upper-menu ul li{
+ 	margin-top:16px;
+ 	text-transform:uppercase;
+ 	font-size:14px;
+ 	font-weight:700;
+ 	width:13%;
+ 	float:left;
+ 	box-sizing:border-box;
+ 	border-right:1px solid #ebebeb;
+ 	overflow:hidden
+ }
+
+ .upper-menu ul li:hover{
+ 	color:gray
+ }
+ .home-all-wrapper{
+ 	height:1000px
+ }
+
+ .top_home_page{
+ 	height:280px;width:100%;margin-top: -34px;
+ }
+
+  .top_home_page h1{
+  	text-align: center;
+  	font-size:50px;
+    padding-top:56px;
+  }
+ .top_home_page h3{
+ 	text-align: center;
+
+ 	font-size:15px;
+ }
+
+
+ .home-all-wrapper h2{
+ 	margin-left:132px; 
+ 	margin-top: 5%;
+ }
+
+ .categories ul{
+ 	margin-left:92px;
+ 	margin-top: -19px;
+ }
+
+ .categories ul li{
+ 	height:140px;
+ 	margin-top:30px;
+ 	margin-left:10px;
+ 	padding:3px;
+ 	width:21%;
+ 	font-size:17px;
+ 	border-radius:4px
+ }
+
+
+ .panel-body-housing{
+ 	height:120px;
+ 	width:100%;
+ }
+
+ 
  .services-detail-wrapper{margin:39px}
  .services-detail-wrapper h2{border-bottom:1px solid #006400;margin:60px;padding-top:10px}.dynamic-row{padding:10px 0 20px;display:block;width:100%;margin:30px}
  .dynamic-row li{line-height:17px}
  .details{display:inline;height:200px;width:30%}
- .genre{margin-top:20px;width:100%;height:40px;border-bottom:1px solid #F5F5F5}
- .genre p{padding-left:20px;font-size:14px}
- .left-other-housing{float:left;height:1400px;display:block;clear:both;}
- .other-jobs-menu{margin-left:110px;line-height:30px}
- .other-jobs-menu ul li{color:#696969}
- .find-wrapper{float:right}
- .search-provider{margin-right:30px;margin-top:26px;float:left;width:1000px;height:1800px}
- .create_requirement{margin-top:10px;margin-left:32px}
- .date,.gender,.price{margin-bottom:30px;margin-top:10px}
-
- .provider_service_image{
- 	border-radius: 16px;width:30%;height:180px;float:left;padding:10px;
- 	}
- .provider_job{
- 	height:200px;border:1px solid gray;width:60%;position:relative;margin-top:10px;margin-bottom:18px;margin-left:110px;float:left;border-radius: 6px;
- 	}
- 	.provider_image{border-radius:100%;float:left}.provider_job h3{margin-top:30px;float:left}.provider_job p{font-size:13px;line-height:20px;text-align:center}
-
-.title h2{margin-top:10px;font-size:16px;}
-.provider_image{height:74px;width:74px;margin-left:140px;margin-top:58px}.show_providers{margin-top:50px;margin-bottom:90px}.service-price{font-weight:1px}.clearfix:after{content:"";display:block;clear:both}.footer-bottom{clear:both}
-
-/*  note/show のcss */
- 
 
 
-.provider-introduction h1{margin-top:40px;width:100%; font-weight: normal; font-size:25px;}
 
-.provider_wrapper p{line-height: 1.5; font-size: 14px;}
-
-.provider_wrapper .sample_03{width:50%;} .provider_wrapper .sample_03 th{width:15%; }  .provider_wrapper .sample_03 td{width:35%;}
-
-.provider_wrapper{width:100%;margin-top:0;height:1400px}
-.provider-introduction{width:73%;height:470px;border-bottom:1px solid #dce0e0;display:block; margin-left:14%;}
-.provider-introduction p{float:left;padding-right:80px;padding-top:50px}
-.face_pic{width:45%;height:72%;margin-right:40px;margin-top:20px;float:left;border-radius:2%;}
 
 .shadow_btn{font-size:22px;font-weight:700;text-decoration:none;display:block;text-align:center;padding:9px;cursor:pointer;border:1px solid #333;color:#fff;box-shadow:2px 2px #555;width:26%; border-radius:3%; }
 .shadow_btn:active{box-shadow:0 0 #555;margin-top:3%; }
