変更が反映されるように

--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -13,8 +13,8 @@
 <div class="panel panel-default">
 
   <div class="panel-body">
-   <% if reservation.note.service_image1? %>
-    <%= image_tag reservation.note.service_image1.thumb.url ,class: "reservation_note_pic"%>
+   <% if reservation.note.service_image1.present? %>
+    <%= image_tag reservation.note.service_image1.url ,class: "reservation_note_pic"%>
       <% else %>
       <%= image_tag 'Seekle_icon.png', :class => 'reservation_note_pic'%>
     <% end %>
@@ -22,8 +22,7 @@
          <div class="reservation_content">
            <p> <strong>日程：</strong><%= reservation.date %></p>
          <p><strong>サービス提供者：</strong> <%= reservation.note.provider.name %></p>
-           </div>
-	
+           </div>	
 	    </div></div>
 	  <% end %>
     <% end %>
