--- a/app/assets/stylesheets/users/history.css
+++ b/app/assets/stylesheets/users/history.css
@@ -6,4 +6,6 @@
 .reservation_note_pic{width:32%;height:100%; float:left;border-radius:3px;}
 
 .reservation_history_wrapper p{line-height: 20px;}
-.reservation_content{margin-top:50px; }
+.reservation_content{margin-top:47px; width:58%;margin-left: 37%;}
+
+.reservation_content p{margin-left: 50px;}
