--- a/app/assets/stylesheets/users/history.css
+++ b/app/assets/stylesheets/users/history.css
@@ -10,4 +10,4 @@
 
 .reservation_content p{margin-left: 50px;}
 
-.reservation_history_wrapper .bootstrap a{text-decoration: none; color:black; border-left:3px solid #F47503;font-size: 16px; margin-left:28px;}
+.reservation_history_wrapper .bootstrap a{text-decoration: none; color:black; border-left:3px solid #F47503;font-size: 16px; margin-left:28px; padding-left: 9px;}
