changed to main_pic

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
 
 
 
-<%= f.hidden_field :profile_pic, autofocus: true %>
+<%= f.hidden_field :mainpic, autofocus: true %>
 
 
 <%= f.hidden_field :profile, autofocus: true %>
