--- a/app/views/providers/profile.html.erb
+++ b/app/views/providers/profile.html.erb
@@ -9,8 +9,8 @@
 
 
  <div class="left-wrapper">
- <% if current_provider.provider_pic? %>
-    <%= image_tag current_provider.provider_pic.url, :class => 'mypage-picture'%>
+ <% if current_provider.mainpic? %>
+    <%= image_tag current_provider.mainpic.url, :class => 'mypage-picture'%>
   <% else %>
     <%= image_tag 'Seekle_icon.png', :class => 'mypage-picture'%>
   <% end %>
