--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -27,8 +27,8 @@
     <tr>
      <th> <p>プロフィール写真 <span class="form-label required">必須</span></p></th>
      <td>
-     <%= f.file_field :profile_pic, class: "form-control image-field" %>
-      <%= f.hidden_field :profile_pic_cache %>
+     <%= f.file_field :mainpic, class: "form-control image-field" %>
+      <%= f.hidden_field :mainpic_cache %>
     </td>
   </tr>
 
@@ -62,6 +62,15 @@
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
+ 
+   <tr>
+     <th> <p>パスワード <span class="form-label required">必須</span></p></th>
+     <td>
+   <%= f.password_field :current_password,  class: 'form-control' %>
+ </td>
+  </tr>
+ 
 
 
 </table></div>
