--- a/app/views/notes/search.html.erb
+++ b/app/views/notes/search.html.erb
@@ -56,8 +56,8 @@
      
     <div class="title"><h2> <%= link_to note.title, note_path(note) %></h2>
      <div class="service-price"><h3> ¥<%= note.price %></h3> </div>
-     <% if note.provider.provider_pic.present? %>
-     <%= image_tag note.provider.provider_pic.url, :class => 'provider_image'%>
+     <% if note.provider.mainpic.present? %>
+     <%= image_tag note.provider.mainpic.url, :class => 'provider_image'%>
      <% else %>
      <%= image_tag 'Seekle_icon.png', :class => 'provider_image'%>
      <% end %>
