--- a/app/views/providers/registrations/edit.html.erb
+++ b/app/views/providers/registrations/edit.html.erb
@@ -66,8 +66,8 @@
 <tr>
  <th> <p>店舗写真<span class="form-label required">必須</span> </p></th>
  <td>
-  <%= f.file_field :provider_pic, class: "form-control image-field" %>
-   <%= f.hidden_field :provider_pic_cache %>
+  <%= f.file_field :mainpic, class: "form-control image-field" %>
+   <%= f.hidden_field :mainpic_cache %>
 </td>
 </tr>
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
