--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -59,9 +59,12 @@
   </table>
 
 <%= f.submit '予約内容を確認する', class:'shadow_btn', data:{ disable_with: "・・・"} %>
+<%= link_to "サービスページへ戻る", :back %>
 </div>
+
 <% end %>
 
 </div>
+
 
 
