--- a/app/assets/stylesheets/notes/reservation.css
+++ b/app/assets/stylesheets/notes/reservation.css
@@ -10,7 +10,7 @@
 
 .listing-wrapper .bootstrap .btn-default{margin-right:10px;  margin-top:18%;float:right;font-size: 20px;}
 
-.reservation-confirm .bootstrap .shadow_btn{margin-left: 26%; margin-bottom:9%; margin-top:6%;font-size: 20px;padding:20px; background-color:	#FFD700; }
+.reservation-confirm .bootstrap .shadow_btn{margin-left: 26%;  margin-top:6%;font-size: 20px;padding:20px; background-color:	#FFD700; }
 
 .providers_info_show .bootstrap .shadow_btn{margin-left: 35%; margin-bottom:9%; margin-top:6%;font-size: 20px;padding:9px; background-color:	#FFD700; }
 
@@ -18,5 +18,4 @@
 .providers_info_show .bootstrap .btn-default{margin-top:5%; border:none;float:left;}
 
 .complete_reservation_wrapper .shadow_btn{margin-left: 35.3%; background-color: #CD5C5C; margin-top: 5%;}
-
 
