--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -85,7 +85,7 @@
 
 <p>退会してしまうと現在のデータはすべて削除されます。<%= button_to "退会する", registration_path(resource_name), :class => 'provider_delete_btn' , data: { confirm: "本当に退会しますか？" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "戻る", :back %>
 
 
   </div>
