--- a/app/views/mailbox/_folder_view.html.erb
+++ b/app/views/mailbox/_folder_view.html.erb
@@ -1,5 +1,6 @@
-<div class="bootstrap">
 
+<div class="bootstrap">
+<%= link_to "サービスページへ戻る", :back %>
   <div class="row">
     <div class="spacer"></div>
      <div class="col-md-12">
