--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -35,7 +35,7 @@
       <p><%= f.label Note.human_attribute_name '価格' %><span class="form-label required">必須</span></p></th>
       <td>
         <div class="input-group">
-         <%= f.text_field :price, class: 'form-control' %>
+         <%= f.text_field :price, class: 'form-control', placeholder:"5000" %>
          <span class="input-group-addon">円</span>
        </div>
      </td>
