category_画像にリンクつけた

--- a/app/views/category/event.html.erb
+++ b/app/views/category/event.html.erb
@@ -11,7 +11,6 @@
 
 
 
-
   <div class="home-category-wrapper">
   <h2>イベント ジャンル</h2>
    <div class="categories">
@@ -21,7 +20,8 @@
        <div class="panel-heading">
         <h3 class="panel-title"><%= link_to "イベントメイクアップ","/notes/search" %></h3>
        </div>
-    <%= image_tag 'event/makeup.png', :class => 'panel-body-housing', :size => 'cover'%>
+   
+  <%= link_to image_tag( 'event/makeup.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
        </div>
          </li>
   </div>
@@ -32,11 +32,11 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "結婚司会","/notes/search" %></h3>
   </div>
-         <%= image_tag 'event/bouquet.png', :class => 'panel-body-housing', :size => 'cover'%>
+          <%= link_to image_tag( 'event/bouquet.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
   </div>
-
 
 
 <div class="bootstrap">
@@ -44,7 +44,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バーテンディング","/notes/search" %></h3>
      </div>
-        <%= image_tag 'event/cocktails.png', :class => 'panel-body-housing', :size => 'cover'%>
+       
+  <%= link_to image_tag( 'event/cocktails.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -55,19 +56,21 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "フラワーデザイナー","/notes/search" %></h3>
  </div>
-         <%= image_tag 'event/floral-arrangement.png', :class => 'panel-body-housing', :size => 'cover'%>
+        
+  <%= link_to image_tag( 'event/floral-arrangement.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
+
     </div>
   </li>
   </div>
-
-
 
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "マジシャン","/notes/search" %></h3>
      </div>
-         <%= image_tag 'event/magicianhat.png', :class => 'panel-body-housing', :size => 'cover'%>
+     
+  <%= link_to image_tag( 'event/magicianhat.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -78,11 +81,13 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "イベントカメラマン","/notes/search" %></h3>
      </div>
-       <%= image_tag 'event/camera.png', :class => 'panel-body-housing', :size => 'cover'%>
+       
+  <%= link_to image_tag('event/camera.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
+
     </div>
   </li>
   </div>
-
 
 
   <div class="bootstrap">
@@ -90,11 +95,12 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "フェイスペインティング","/notes/search" %></h3>
      </div>
-        <%= image_tag 'event/facepaint.png', :class => 'panel-body-housing', :size => 'cover'%>
+        
+  <%= link_to image_tag('event/facepaint.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
   </div>
-
 
 
 
@@ -104,7 +110,9 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ヘアスタイリング","/notes/search" %></h3>
      </div>
-       <%= image_tag 'event/bride.png', :class => 'panel-body-housing', :size => 'cover'%>
+    
+  <%= link_to image_tag('event/bride.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
   </div>
@@ -114,17 +122,21 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "バルーンアーティスト","/notes/search" %></h3>
      </div>
-        <%= image_tag 'event/shoes.png', :class => 'panel-body-housing', :size => 'cover'%>
+  <%= link_to image_tag('event/shoes.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
+
+
+
+
 
   <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "コメディアン","/notes/search" %></h3>
      </div>
-      <%= image_tag 'event/microphone.png', :class => 'panel-body-housing', :size => 'cover'%>
+  <%= link_to image_tag('event/microphone.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -134,7 +146,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "DJ","/notes/search" %></h3>
      </div>
-       <%= image_tag 'event/record.png', :class => 'panel-body-housing', :size => 'cover'%>
+  <%= link_to image_tag( 'event/record.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
   </div>
@@ -146,11 +159,14 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-      <%= image_tag 'event/eyeshadow.png', :class => 'panel-body-housing', :size => 'cover'%>
+
+  <%= link_to image_tag( 'event/eyeshadow.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
  </ul>
   </div>
+
 
 
 
