--- a/app/views/category/health.html.erb
+++ b/app/views/category/health.html.erb
@@ -21,7 +21,8 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "マッサージ","/notes/search" %></h3>
   </div>
-    <%= image_tag 'health/massage.png', :class => 'panel-body-housing', :size => 'cover'%>
+ 
+  <%= link_to image_tag( 'health/massage.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -32,10 +33,12 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "エステ","/notes/search" %></h3>
   </div>
-        <%= image_tag 'health/este.png', :class => 'panel-body-housing', :size => 'cover'%>
+    
+  <%= link_to image_tag( 'health/este.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
+
 
 
 <div class="bootstrap">
@@ -43,7 +46,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "サイクリング","/notes/search" %></h3>
      </div>
-       <%= image_tag 'health/cicling.png', :class => 'panel-body-housing', :size => 'cover'%>
+     
+  <%= link_to image_tag( 'health/cicling.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -54,7 +58,7 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "ヨガ","/notes/search" %></h3>
  </div>
-      <%= image_tag 'health/ballet.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= link_to image_tag( 'health/ballet.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -65,7 +69,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "栄養士","/notes/search" %></h3>
      </div>
-      <%= image_tag 'health/vegies.png', :class => 'panel-body-housing', :size => 'cover'%>
+    
+  <%= link_to image_tag( 'health/vegies.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -76,10 +81,13 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "セラピー","/notes/search" %></h3>
      </div>
-   <%= image_tag 'health/lotus.png', :class => 'panel-body-housing', :size => 'cover'%>
+  <%= link_to image_tag( 'health/lotus.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
+
+
+
 
 
 
@@ -88,7 +96,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "パーソナルシェフ","/notes/search" %></h3>
      </div>
-<%= image_tag 'health/chef.png', :class => 'panel-body-housing', :size => 'cover'%>    </div>
+  <%= link_to image_tag( 'health/chef.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>    </div>
   </li>
   </div>
 
@@ -101,7 +109,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "人生相談","/notes/search" %></h3>
      </div>
-       <%= image_tag 'health/chairs.png', :class => 'panel-body-housing', :size => 'cover'%>
+     
+  <%= link_to image_tag( 'health/chairs.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -111,8 +120,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "カウンセリング","/notes/search" %></h3>
      </div>
-       <%= image_tag 'health/coffee.png', :class => 'panel-body-housing', :size => 'cover'%>
-    </div>
+     
+  <%= link_to image_tag( 'health/coffee.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>    </div>
   </li>
   </div>
 
@@ -121,7 +130,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "座禅","/notes/search" %></h3>
      </div>
-       <%= image_tag 'health/temple.png', :class => 'panel-body-housing', :size => 'cover'%>
+     
+    <%= link_to image_tag( 'health/temple.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
@@ -131,18 +141,17 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ストレッチ","/notes/search" %></h3>
      </div>
-       <%= image_tag 'health/strech.png', :class => 'panel-body-housing', :size => 'cover'%>
+     <%= link_to image_tag( 'health/strech.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
   </div>
-
 
 <div class="bootstrap">
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-       <%= image_tag 'pigeon.png', :class => 'panel-body-housing', :size => 'cover'%>
+          <%= link_to image_tag( 'pigeon.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
  </ul>
