--- a/app/views/category/lesson.html.erb
+++ b/app/views/category/lesson.html.erb
@@ -23,7 +23,6 @@
 
 
 
-
    <div class="categories">
      <ul>
 
@@ -33,7 +32,10 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "歌","/notes/search" %></h3>
   </div>
-      <%= image_tag 'lesson/guitar.png', :class => 'panel-body-housing', :size => 'cover'%>
+     
+
+  <%= link_to image_tag( 'lesson/guitar.png', { :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
 
@@ -41,7 +43,7 @@
    <div class="panel-heading">
     <h3 class="panel-title"><%= link_to "語学","/notes/search" %></h3>
   </div>
-      <%= image_tag 'lesson/english.png', :class => 'panel-body-housing', :size => 'cover'%>
+  <%= link_to image_tag( 'lesson/english.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
 
@@ -50,7 +52,10 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "料理","/notes/search" %></h3>
      </div>
-        <%= image_tag 'lesson/cooking.png', :class => 'panel-body-housing', :size => 'cover'%>
+   
+
+  <%= link_to image_tag('lesson/cooking.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
 
@@ -59,9 +64,13 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ピアノ","/notes/search" %></h3>
      </div>
-         <%= image_tag 'lesson/piano.png', :class => 'panel-body-housing', :size => 'cover'%>
+        
+  <%= link_to image_tag('lesson/piano.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
+
+
+
 
 
 
@@ -69,7 +78,8 @@
    <div class="panel-heading">
    <h3 class="panel-title"><%= link_to "武道","/notes/search" %></h3>
  </div>
-        <%= image_tag 'lesson/muay.png', :class => 'panel-body-housing', :size => 'cover'%>
+       <%= link_to image_tag('lesson/muay.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
 
@@ -77,7 +87,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ウェブ","/notes/search" %></h3>
      </div>
-  <%= image_tag 'lesson/coding.png', :class => 'panel-body-housing', :size => 'cover'%>
+  
+  <%= link_to image_tag('lesson/coding.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
 
@@ -85,7 +96,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "ダンス","/notes/search" %></h3>
      </div>
-     <%= image_tag 'lesson/dance.png', :class => 'panel-body-housing', :size => 'cover'%>
+     
+  <%= link_to image_tag('lesson/dance.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
 
@@ -93,7 +105,7 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "勉学","/notes/search" %></h3>
      </div>
-          <%= image_tag 'lesson/study.png', :class => 'panel-body-housing', :size => 'cover'%>
+          <%= link_to image_tag('lesson/study.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
 
@@ -101,7 +113,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "絵","/notes/search" %></h3>
      </div>
-         <%= image_tag 'lesson/paint.png', :class => 'panel-body-housing', :size => 'cover'%>
+      
+  <%= link_to image_tag('lesson/paint.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
 
@@ -109,15 +122,21 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "パーソナルトレーニング","/notes/search" %></h3>
      </div>
-         <%= image_tag 'lesson/fitness.png', :class => 'panel-body-housing', :size => 'cover'%>
+         <%= link_to image_tag('lesson/fitness.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
+
+
+
 
    <li><div class="panel panel-default">
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "編み物","/notes/search" %></h3>
      </div>
-        <%= image_tag 'lesson/crochet.png', :class => 'panel-body-housing', :size => 'cover'%>
+    
+  <%= link_to image_tag('lesson/crochet.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
+
     </div>
   </li>
 
@@ -125,7 +144,8 @@
    <div class="panel-heading">
      <h3 class="panel-title"><%= link_to "その他","/notes/search" %></h3>
      </div>
-         <%= image_tag 'pigeon.png', :class => 'panel-body-housing', :size => 'cover'%>
+        
+  <%= link_to image_tag('pigeon.png',{ :class => 'panel-body-housing', :size => 'cover'}), "/notes/search" %>
     </div>
   </li>
  </ul>
