--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -14,6 +14,8 @@
   </div>
  </div>
 
+
+
  <div id="fade-in2" class="dropmenu">
   <div class="wrapper">
    <ul>
@@ -25,12 +27,13 @@
    </ul>
   </div>
  </div>
+ 
 
  <div class="explain-seekle-wrapper">
   <div class="container">
    <div class="Seekle-heading">
-    <h2>これからのあなたの新しい暮らしかた</h2>
-     <p>Seekleでは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのを見つけオンライン予約することが可能です！</p>
+    <h2>もうサービス選びに失敗しない！</h2>
+     <p>Seekleでは語学教室・ポートフォリオ撮影・ハウスクリーニングなど<br>各種サービスのを見つけオンラインで予約することが可能です！</p>
     </div>
   </div>
  </div>
@@ -43,7 +46,7 @@
       <i class="fa fa-users fa-5x"></i>
      </div>
 <h2>プロバイダーとは</h2>
-  <p>サービスを提供する提供者です。プロフィール、レビュー、サービス価格などの様々な情報から、ぴったりなプロバイダーを比較できます。</p>
+  <p>サービスを提供する提供者のことです。プロフィール、口コミ、サービス価格などの様々な情報から、プロバイダーを比較できます。</p>
     </div>
   </div>
      <div class="reasons">
@@ -51,8 +54,9 @@
        <div class="icons">
           <i class="fa fa-money fa-5x"></i>
         </div>
-      <h2>お手頃な費用</h2>
-<p>高いお金を払って専門のプロ、業者に頼む前に、あなたの周りで求めるサービスを提供するプロバイダーを探すことができます。 </p>
+      <h2>最大10万円保証</h2>
+<p>Seekleを経由して利用したサービスに問題があった場合、最大10万円を保証します</p>
+
         </div>
   </div>
 
@@ -63,7 +67,7 @@
        <i class="fa fa-smile-o fa-5x"></i>
      </div>
  <h2>豊富なジャンル</h2>
-<p>カメラマン、英会話教室、便利屋さんなど、Seekleは様々なジャンルのサービスを見つけることのできる場です。</p>
+<p>カメラマン、便利屋さん、マジシャンなど、Seekleは様々なジャンルのサービスを見つけることのできる場です。</p>
         </div>
   </div>
   </div>
