--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -20,18 +20,18 @@
 
 
 
-@media screen and  ( max-width:640px )
+@media screen and  ( max-width:768px )
 {
   /* ボディ */
   header
   {
     margin: 0 10px 0;
-    width:250%;
+    width:100%;
   }
 
   .logo{
-    width:13%;
-    height:50px;
+    width:34%;
+    height:56px;
   }
 }
 
@@ -68,7 +68,7 @@
   .header-right a{
     font-size: 10px ;
     margin-top:-60px;
-    <<<<<<< HEAD
+
     float:right;
   }
 
@@ -177,18 +177,84 @@ and (max-device-width:568px)
 .name_field input{width:340px;font-size:20px;padding:7px}
 .name_field{margin-top:29px}
 #user_remember_me{width:0}
-.content_in_user{margin-left:460px;width:303px;padding-top:53px;padding-bottom:90px}
-.content_in_user a{color:#483D8B}
-.log_button{border-radius:5px;width:333px;font-size:15px;color:#fff;padding-top:15px;padding-bottom:15px}
-#face{background-color:#3b5998}
-#face:hover{background-color:#6495ED}
-#login,#sign{background-color:coral;margin-top:10px;margin-bottom:0}
-#login:hover,#sign:hover{background-color:#FFA07A}
-.actions p{height:20px;margin-top:0}
-#user_email:focus,#user_password:focus,#user_password_confirmation:focus{outline:0}#user_email,#user_password,#user_password_confirmation,#user_パスワード確認{border:1px solid gray;border-radius:2px;width:333px;padding-top:10px}
-#pass_for{float:right}hr{margin:10px 0 0;width:100%}
-#sign{margin-bottom:18px}
-.dropmenu{width:960px;margin:auto}
+
+.content_in_user{
+  margin-left:440px;
+  width:303px;
+  padding-top:53px;
+  padding-bottom:90px
+}
+
+.content_in_user a{
+  color:#483D8B;
+}
+
+
+
+@media screen and  ( max-width:640px )
+{
+ .content_in_user{
+  margin-left:0px;
+    width:303px;
+ }
+}
+
+
+
+
+
+.log_button{
+  border-radius:5px;
+  width:333px;
+  font-size:15px;
+  color:#fff;
+  padding-top:15px;
+  padding-bottom:15px
+}
+
+
+#face{
+  background-color:#3b5998
+}
+#face:hover{
+  background-color:#6495ED
+}
+#login,#sign{
+  background-color:coral;
+  margin-top:10px;
+  margin-bottom:0
+}
+#login:hover,#sign:hover{
+  background-color:#FFA07A
+}
+.actions p{
+  height:20px;
+  margin-top:0
+}
+
+#user_email:focus,#user_password:focus,#user_password_confirmation:focus{
+  outline:0
+  }
+
+#user_email,#user_password,#user_password_confirmation,#user_パスワード確認{
+  border:1px solid gray;
+  border-radius:2px;
+  width:333px;
+  padding-top:10px
+}
+
+hr{
+    margin:10px 0 0;
+    width:100%
+  }
+#sign{
+  margin-bottom:18px
+}
+
+.dropmenu{
+  width:960px;
+  margin:auto
+}
 .dropmenu:after,.dropmenu:before{content:"";display:table}
 .dropmenu:after{clear:both}
 .dropmenu li{position:relative;width:20%;float:left}
